--- a/distr-dqn.ipynb
+++ b/distr-dqn.ipynb
@@ -2,19 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "episode: 1  reward: -3515.5  weight_reward: -3515.500  epsilon: 0.90\n",
-      "episode: 2  reward: -4266.5  weight_reward: -3523.010  epsilon: 0.86\n",
-      "episode: 3  reward: -45827.5  weight_reward: -3946.055  epsilon: 0.81\n",
-      "episode: 4  reward: -13003.5  weight_reward: -4036.629  epsilon: 0.77\n",
-      "episode: 5  reward: -330004.5  weight_reward: -7296.308  epsilon: 0.74\n",
-      "episode: 6  reward: -1336926.5  weight_reward: -20592.610  epsilon: 0.70\n"
+      "episode: 1  reward: -426.5  weight_reward: -426.500  epsilon: 0.90\n",
+      "episode: 2  reward: -2733.5  weight_reward: -449.570  epsilon: 0.86\n",
+      "episode: 3  reward: -9536.5  weight_reward: -540.439  epsilon: 0.81\n",
+      "episode: 4  reward: -9678.5  weight_reward: -631.820  epsilon: 0.77\n",
+      "episode: 5  reward: -8894.5  weight_reward: -714.447  epsilon: 0.74\n",
+      "episode: 6  reward: -20959.5  weight_reward: -916.897  epsilon: 0.70\n",
+      "episode: 7  reward: -98498.5  weight_reward: -1892.713  epsilon: 0.66\n",
+      "episode: 8  reward: -301765.5  weight_reward: -4891.441  epsilon: 0.63\n"
      ]
     },
     {
@@ -24,9 +26,9 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 273\u001b[0m\n\u001b[0;32m    271\u001b[0m     env\u001b[38;5;241m.\u001b[39mrender()\n\u001b[0;32m    272\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[1;32m--> 273\u001b[0m     action \u001b[38;5;241m=\u001b[39m \u001b[43meval_net\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mact\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mFloatTensor\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexpand_dims\u001b[49m\u001b[43m(\u001b[49m\u001b[43mobs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mepsilon\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    274\u001b[0m     next_obs, reward, done \u001b[38;5;241m=\u001b[39m env\u001b[38;5;241m.\u001b[39mstep(action)\n\u001b[0;32m    275\u001b[0m     count \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
-      "Cell \u001b[1;32mIn[7], line 112\u001b[0m, in \u001b[0;36mcategorical_dqn.act\u001b[1;34m(self, observation, epsilon)\u001b[0m\n\u001b[0;32m    110\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mact\u001b[39m(\u001b[38;5;28mself\u001b[39m, observation, epsilon):\n\u001b[0;32m    111\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m random\u001b[38;5;241m.\u001b[39mrandom() \u001b[38;5;241m>\u001b[39m epsilon:\n\u001b[1;32m--> 112\u001b[0m         dist \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mforward\u001b[49m\u001b[43m(\u001b[49m\u001b[43mobservation\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    113\u001b[0m         dist \u001b[38;5;241m=\u001b[39m dist\u001b[38;5;241m.\u001b[39mdetach()\n\u001b[0;32m    114\u001b[0m         dist \u001b[38;5;241m=\u001b[39m dist\u001b[38;5;241m.\u001b[39mmul(torch\u001b[38;5;241m.\u001b[39mlinspace(v_min, v_max, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39matoms_num))\n",
-      "Cell \u001b[1;32mIn[7], line 99\u001b[0m, in \u001b[0;36mcategorical_dqn.forward\u001b[1;34m(self, observation)\u001b[0m\n\u001b[0;32m     97\u001b[0m x \u001b[38;5;241m=\u001b[39m F\u001b[38;5;241m.\u001b[39mrelu(x)\n\u001b[0;32m     98\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfc2(x)\n\u001b[1;32m---> 99\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[43mF\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrelu\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    100\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnoisy1(x)\n\u001b[0;32m    101\u001b[0m x \u001b[38;5;241m=\u001b[39m F\u001b[38;5;241m.\u001b[39mrelu(x)\n",
+      "Cell \u001b[1;32mIn[5], line 273\u001b[0m\n\u001b[0;32m    271\u001b[0m     env\u001b[38;5;241m.\u001b[39mrender()\n\u001b[0;32m    272\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[1;32m--> 273\u001b[0m     action \u001b[38;5;241m=\u001b[39m \u001b[43meval_net\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mact\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mFloatTensor\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexpand_dims\u001b[49m\u001b[43m(\u001b[49m\u001b[43mobs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mepsilon\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    274\u001b[0m     next_obs, reward, done \u001b[38;5;241m=\u001b[39m env\u001b[38;5;241m.\u001b[39mstep(action)\n\u001b[0;32m    275\u001b[0m     count \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
+      "Cell \u001b[1;32mIn[5], line 112\u001b[0m, in \u001b[0;36mcategorical_dqn.act\u001b[1;34m(self, observation, epsilon)\u001b[0m\n\u001b[0;32m    110\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mact\u001b[39m(\u001b[38;5;28mself\u001b[39m, observation, epsilon):\n\u001b[0;32m    111\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m random\u001b[38;5;241m.\u001b[39mrandom() \u001b[38;5;241m>\u001b[39m epsilon:\n\u001b[1;32m--> 112\u001b[0m         dist \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mforward\u001b[49m\u001b[43m(\u001b[49m\u001b[43mobservation\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    113\u001b[0m         dist \u001b[38;5;241m=\u001b[39m dist\u001b[38;5;241m.\u001b[39mdetach()\n\u001b[0;32m    114\u001b[0m         dist \u001b[38;5;241m=\u001b[39m dist\u001b[38;5;241m.\u001b[39mmul(torch\u001b[38;5;241m.\u001b[39mlinspace(v_min, v_max, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39matoms_num))\n",
+      "Cell \u001b[1;32mIn[5], line 97\u001b[0m, in \u001b[0;36mcategorical_dqn.forward\u001b[1;34m(self, observation)\u001b[0m\n\u001b[0;32m     95\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mforward\u001b[39m(\u001b[38;5;28mself\u001b[39m, observation):\n\u001b[0;32m     96\u001b[0m     x \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfc1(observation)\n\u001b[1;32m---> 97\u001b[0m     x \u001b[38;5;241m=\u001b[39m \u001b[43mF\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrelu\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     98\u001b[0m     x \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfc2(x)\n\u001b[0;32m     99\u001b[0m     x \u001b[38;5;241m=\u001b[39m F\u001b[38;5;241m.\u001b[39mrelu(x)\n",
       "File \u001b[1;32me:\\Programming\\Projects\\TrustRegionECE5523\\.conda\\Lib\\site-packages\\torch\\nn\\functional.py:1704\u001b[0m, in \u001b[0;36mrelu\u001b[1;34m(input, inplace)\u001b[0m\n\u001b[0;32m   1702\u001b[0m     result \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mrelu_(\u001b[38;5;28minput\u001b[39m)\n\u001b[0;32m   1703\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m-> 1704\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrelu\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1705\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m result\n",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
@@ -242,7 +244,7 @@
     "    plt.show()\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    episode = 100\n",
+    "    episode = 50\n",
     "    epsilon_init = 0.95\n",
     "    epsilon_decay = 0.95\n",
     "    epsilon_min = 0.01\n",
@@ -315,7 +317,7 @@
     "            obs = next_obs\n",
     "            if i > exploration:\n",
     "                loss = train(eval_net, target_net, buffer, v_min, v_max, atoms_num, gamma, batch_size, optimizer, count, update_freq)\n",
-    "                cumulative_loss += loss\n",
+    "                cumulative_loss = cumulative_loss + loss\n",
     "            steps += 1\n",
     "            agent_path.append(obs)  # Add to path\n",
     "            if done:\n",
